# crowdsource_dj

./: .env.docker  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  fly.toml  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js  tsconfig.json  utils.py  vite.config.ts
backend/: .env.example  Dockerfile  api.py  app.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  schemas.py  security.py  sync.py  utils.py  websocket_manager.py
backend/routes/: __init__.py  auth.py  chat.py  rooms.py  songs.py  ws.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  PlayerBar.tsx  Sidebar.tsx  TrackGrid.tsx
frontend/static/css/: app.css
frontend/static/fonts/: font.css
frontend/static/js/: audioPlayer.js  draggableTable.js  home.js  main.js  queue.js  sync.js
frontend/templates/: index.html  room.html
nginx/: nginx.conf
src/: App.tsx  index.css
src/components/: AudioPlayer.css  AudioPlayer.css.backup  AudioPlayer.tsx  AuthModal.css  AuthModal.tsx  Chat.css  Chat.tsx  PlayerControls.css  PlayerControls.tsx  Queue.css  Queue.tsx  SearchBar.css  SearchBar.tsx  ThemeToggle.css  ThemeToggle.tsx
src/contexts/: AuthContext.tsx  RoomContext.tsx  ThemeContext.tsx
src/pages/: LandingPage.css  LandingPage.tsx  RoomPage.css  RoomPage.css.backup  RoomPage.tsx  RoomPage.tsx.backup
src/utils/: api.ts  auth.ts  websocket.ts
