[project]
name = "crowdsource_dj"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
    "yt-dlp>=2026.3.17",
    "ytmusicapi>=1.11.5",
]
